# no-three-in-line

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  binary_count.cuh  board.cu  common.hpp  compare_with_unknowns.cuh  lookup_tables.cuh  main.cpp  main_c4.cpp  main_c4near.cpp  main_d2.cpp  main_frontier.cpp  params.hpp  parsing.hpp  queue_generic.hpp  run.sh  search_cli.hpp  three_board.cu  three_board_c4.cu  three_board_c4near.cu  three_board_d2.cu  three_kernel.cu  three_kernel.hpp  three_kernel_c4.cu  three_kernel_c4.hpp  three_kernel_c4near.cu  three_kernel_c4near.hpp  three_kernel_d2.cu  three_kernel_d2.hpp  three_search.cuh  three_traits_asym.cuh  three_traits_c4.cuh
.github/workflows/: dev.yml
deploy/runpod/: Dockerfile  run.sh
results/: 10.out  11.out  12.out  13.out  14.out  15.out  16.out  17.out  18.out  7.out  8.out  9.out  c4-44.out  c4-46.out  c4-48.out  c4-50.out  c4-52.out  c4near-41.out  c4near-43.out  c4near-45.out  c4near-47.out
scripts/: convert_flammenkamp.py  generate_shards.py  run_workers.py
test/: CMakeLists.txt  board_symmetry_test.cu  compare_with_unknowns_test.cu  first_center_on_test.cu  gcd_reduce_test.cu  mirror_around_test.cu  on_cells_test.cu  three_board_c4_test.cu  three_board_test.cu
